# jack1

./: .gitignore  .gitmodules  .mailmap  Makefile.am  README.developers.rst  README.md  README.rst  TODO.dbus  configure.ac  jack.pc.in  jackserver.pc.in  wscript
.github/workflows/: build.yml
config/cpu/alpha/: atomicity.h
config/cpu/cris/: atomicity.h
config/cpu/ia64/: atomicity.h
config/cpu/m68k/: atomicity.h
config/cpu/powerpc/: atomicity.h
config/cpu/s390/: atomicity.h
doc/: Makefile.am  mainpage.dox
drivers/alsa/: memops.c
drivers/alsa-midi/: alsa_rawmidi.c
drivers/am/: alsa_rawmidi.c
drivers/firewire/: ffado_driver.c  ffado_driver.h
include/: Makefile.am  engine.h  internal.h
jack/: Makefile.am  engine.h
jackd/: Makefile.am  controlapi.c  engine.c  jackcontroller.c  jackcontroller_iface_configure.c  jackcontroller_iface_control.c  jackcontroller_iface_introspectable.c  jackcontroller_iface_patchbay.c  jackcontroller_iface_transport.c  jackcontroller_internal.h  jackcontroller_xml.c  jackcontroller_xml_expat.c  jackcontroller_xml_libxml.c  jackcontroller_xml_nop.c  jackcontroller_xml_write_raw.c  jackctl.c  jackctl.h  jackdbus.c  jackdbus.h
libjack/: Makefile.am  client.c  messagebuffer.c  metadata.c  port.c  shm.c
server/: clientengine.c  clientengine.h  controlapi.c  engine.c  jackcontroller.c  jackcontroller.h  jackcontroller_iface_configure.c  jackcontroller_iface_control.c  jackcontroller_iface_patchbay.c  jackcontroller_xml.c  jackcontroller_xml.h  jackcontroller_xml_expat.c  jackcontroller_xml_write_raw.c  jackctl.c  jackdbus.c  jackdbus.h  org.jackaudio.service.in
tools/: Makefile.am  jack_control
